--- a/client/style.css
+++ b/client/style.css
@@ -42,44 +42,251 @@ body {
     margin-right: auto;
     left: 0;
     right: 0;
-    padding: 0 30px 0 30px;
     position: absolute;
     width: 30%;
     height: auto;
-    background-color: #bf4930c4;
-    border-radius: 10px;
-    transform: scale(1.2);
 }
-#nickInput {
-    margin-bottom: 20px;
-    padding: 0;
-    height: 30px;
-    cursor: pointer;
-    width: 100%;
-    background: #F6F6f6;
-    border-radius: 8px;
-    border: 1px solid #cecece;
 
-}
-#nickInput:focus {
-    outline: none;
-    padding-left: 20px;
-    width: 90%;
-    font-size: 20px;
-    border-color: red;
-
-}
-#playBtn {
-    font-size: 20px;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 20px;
-    height: 30px;
+.buttonn {
+    line-height: 50px;
+    height: 50px;
+    text-align: center;
+    width: 80%;
     cursor: pointer;
+    margin-top: 30px;
+    color: #FFF;
+    transition: all 0.3s;
+    position: relative;
+  }
+  .buttonn span {
+    transition: all 0.3s;
+  }
+  .buttonn::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
     width: 100%;
-    background-color: #FF2C00;
-    border: 0px;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: all 0.3s;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-top-color: rgba(255,255,255,0.5);
+    border-bottom-color: rgba(255,255,255,0.5);
+    transform: scale(0.1, 1);
+  }
+  .buttonn:hover span {
+    letter-spacing: 2px;
+  }
+  .buttonn:hover::before {
+    opacity: 1; 
+    transform: scale(1, 1); 
+  }
+  .buttonn::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: all 0.3s;
+    background-color: rgba(255,255,255,0.1);
+  }
+  .buttonn:hover::after {
+    opacity: 0; 
+    transform: scale(0.1, 1);
+  }
+  #statsInterface {
+    width: 50%;
+    height: auto;
+    position: absolute;
+    top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
     color: white;
-    border-radius: 30px;
-    cursor: pointer;
+
+    border-radius: 10px;
+}
+
+@keyframes combat {
+    from {
+        box-shadow: 0px 0px 0px 0px rgb(255 58 70);
+    }
+
+    50% {
+        box-shadow: 0px 0px 40px 0px rgb(255 58 70);
+    }
+
+    to {
+        box-shadow: 0px 0px 0px 0px rgb(255 58 70);
+    }
+}
+
+.hpbar {
+    width: 100%;
+    height: 35px;
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+}
+
+.bar-value {
+    width: 100%;
+    display: inline-block;
+    padding: 10px 10px 10px 10px;
+}
+
+#spells-interface {
+    position: absolute;
+    display: flex;
+    width: 750px;
+    height: 75px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    bottom: 2%;
+}
+
+#cooldown-interface {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    bottom: 20%;
+    width: 20%;
+    height: auto;
+    /*background-color: red;*/
+}
+
+.cooldownbar {
+    width: 0%;
+    height: 20px;
+    margin: 10px 0 10px 0;
+    border-radius: 20px;
+    border: 3px solid grey;
+    padding: 0;
+    text-align: center;
+    color: white;
+}
+
+#global {
+    background-color: #FF9900;
+    visibility: hidden;
+}
+
+#spell {
+    background-color: #006363;
+    visibility: hidden;
+}
+
+.spell-button {
+    display: inline-block;
+    background-color: transparent;
+    border: .2px solid gray;
+    border-radius: 15%;
+    width: 70px;
+    height: 70px;
+    margin: 0px 3px 0px 3px;
+    text-align: left;
+    color: white;
+    font-weight: bolder;
+    padding-bottom: 6%;
+}
+
+.spell-button:hover {
+    box-shadow: inset 0em 0em 2px black;
+}
+
+h1 {
+    display: block;
+    text-align: center;
+    color: #ffe1e1;
+
+}
+
+#longLasting {
+    position: absolute;
+    display: flex;
+    top: 200px;
+    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    color: white;
+    font-weight: bolder;
+    font-size: 20px;
+    min-width: 1px;
+    max-width: 200px;
+    height: auto;
+}
+
+.longLastingSpell {
+    width: 50px;
+    text-align: center;
+
+    height: 50px;
+}
+
+.centred-container {
+    position: absolute;
+    z-index: 10;
+    margin: 50px auto auto auto;
+    left: 0;
+    right: 0;
+}
+
+#settings {
+    width: 50%;
+    min-height: 50%;
+    background-color: #ffffff;
+    border-radius: 10px;
+    border: 2px solid black;
+    display: none;
+}
+
+label {
+    margin: 30px;
+}
+
+.custom-checkbox {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+.custom-checkbox+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+}
+
+.custom-checkbox+label::before {
+    content: '';
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid #adb5bd;
+    border-radius: 0.25em;
+    margin-right: 0.5em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+}
+
+.custom-checkbox:checked+label::before {
+    border-color: #0b76ef;
+    background-color: #0b76ef;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
