--- a/client/style.css
+++ b/client/style.css
@@ -4,6 +4,26 @@ body {
     width: auto;
     margin: 0px;
 }
+#top-interface {
+    display: flex;
+    flex-direction: column;
+    right: 0;
+    top: 0;
+    position: absolute;
+    width: 12%;
+    height: 30%;
+    background-color: #adb5bd;
+    padding: 5px;
+    border-radius: 10px;
+    margin: 15px;
+}
+.top-value {
+    width: 100%;
+    height: 10%;
+    background-color: #006363;
+    border-radius: 10px;
+    margin-top: 3px;
+}
 #canvas {
     /*border: 3px solid white;*/
     background-color: #000000f0;
