--- a/client/style.css
+++ b/client/style.css
@@ -11,18 +11,35 @@ body {
     top: 0;
     position: absolute;
     width: 12%;
-    height: 30%;
-    background-color: #adb5bd;
+    height: auto;
+    background-color: #3d3b3b73;
     padding: 5px;
     border-radius: 10px;
+    min-width: 300px;
     margin: 15px;
+    color: white;
 }
 .top-value {
     width: 100%;
+    padding: 2px;
     height: 10%;
-    background-color: #006363;
     border-radius: 10px;
     margin-top: 3px;
+    display: flex;
+    flex-direction: row;
+    display: none;
+}
+.text-overlay {
+    transform: translate(-23px, 0%);
+    text-align: center;
+    /* color: white; */
+}
+.text-overlay span {
+    margin: 0;
+}
+.top-img {
+    width: 29px;
+    height: 29px;
 }
 #canvas {
     /*border: 3px solid white;*/
